gcc/testsuite/rust/rustc/ui/suggestions/issue-109854_dg.rs
fn generate_setter() {
    String::with_capacity(
// { dg-error ".E0061." "" { target *-*-* } .-1 }
    generate_setter,
    r#"
pub(crate) struct Person<T: Clone> {}
"#,
     r#""#,
    );
}

fn main() {}

